Fix z-index conflict with react-select

--- a/src/client/components/DateRangeInput/DateRangeInput.less
+++ b/src/client/components/DateRangeInput/DateRangeInput.less
@@ -36,7 +36,7 @@
   position: absolute;
   top: 0;
   right: 1ch;
-  z-index: 10;
+  z-index: 1;
 }
 
 .opuscapita_date-range-input__input-field {
@@ -110,7 +110,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 1;
   pointer-events: none;
   color: #aaa;
   padding-right: 24px;
